<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestionsActivity"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/background_light"
    >

    <TextView
        android:id="@+id/tv_question_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textColor="@color/text_dark"
        android:gravity="center"
        android:text="@string/question_item"
        />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="16dp"
        android:max="10"
        android:progress="5"
        android:indeterminate="false"
        app:trackCornerRadius="10dp"
        app:trackThickness="5dp"
        app:indicatorColor="@color/progress"
        app:trackColor="@color/background_dark"
        />

    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:id="@+id/iv_quiz_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/image_content_description"
                    tools:src="@drawable/ic_flag_of_germany"
                    />

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textColor="@color/text_dark"
                    tools:text="What country does this flag belong to?"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_option_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="120dp"
                        android:padding="15dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark_alt"
                        android:background="@drawable/button_pill"
                        tools:text="Apple"
                        />

                    <TextView
                        android:id="@+id/tv_option_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="120dp"
                        android:padding="15dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark_alt"
                        android:background="@drawable/button_pill"
                        tools:text="Apple"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_option_three"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="120dp"
                        android:padding="15dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark_alt"
                        android:background="@drawable/button_pill"
                        tools:text="Apple"
                        />

                    <TextView
                        android:id="@+id/tv_option_four"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="120dp"
                        android:padding="15dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/text_dark_alt"
                        android:background="@drawable/button_pill"
                        tools:text="Apple"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="16dp"
                    android:height="58dp"
                    android:background="@drawable/action_button_pill"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:visibility="visible" />
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
